--- a/3.html
+++ b/3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>WEB1 - JavaScript</title>
-    <link rel="stylesheet" type="text/css" href="./css/my_style.css">
+    <link rel="stylesheet" type="text/css" href="./my_style.css">
   </head>
   <body>
     <h1><a href="index.html">WEB</a></h1>
